# Project_HBC

./: .gitignore  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
dash_app/: app.py
dash_app/components/: __init__.py  accumulated_savings.py  actions_chart.py  battery_chart.py  chart_dropdown.py  data_plots.py  layout.py  savings_chart.py
manual_tests/: planner_adaptiv_test.py
src/: main.py
src/controller/: __init__.py  collector.py  planner.py
src/controller/enums/: __init__.py  action_reason.py  solar_strategy.py
src/data/: __init__.py
src/data/battery/: __init__.py  battery.py
src/data/electricity/: __init__.py  electricity.py  flat_charges.py  provider.py  provider_company.py  spot_price.py  tariff.py  tariff_company.py
src/data/helperfunctions/: __init__.py  data.py  parser.py  url_builder.py  week_days.py
src/data/helperfunctions/minicon/: __init__.py  minicon.py  minicon_variable.py
src/data/solar/: __init__.py  solar.py
src/database/: __init__.py  database.py
src/ui/: __init__.py  application.py  scheduler.py  tab_layout.py
src/ui/components/: __init__.py
src/ui/components/tabs/: __init__.py  graphs_tab.py  home_tab.py  plan_tab.py
src/ui/components/tabs/profile_tab/: __init__.py  danish_regions.py  geolocator.py  profile_tab.py  solar_panels_top.py  supplement_top.py
src/ui/helperfunctions/: __init__.py  write_text.py
src/ui/post_processing/: __init__.py  profit.py
tests/: test_dummy.py
tests/data/electricity/: test_electricity.py  test_flat_charges.py  test_provider.py  test_spot_price.py  test_tariff.py
tests/data/helperfunctions/: test_data.py  test_parser.py  test_url_builder.py
tests/data/solar/: test_solar.py
