[metadata]
name = hbc
version = 1.0.0
description = Source Code for HomeBatteryController
author = Rasmus Hyldgaard & Joergen Moesgaard Joergensen
platforms = unix, linux, osx, cygwin, win32
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11

[options]
packages = find:
install_requires =
    requests>=2
    types-requests>=2
    pandas>=2
    matplotlib>=3
    geopy>=2
    pyserial>=3.5
python_requires = >=3.11
package_dir =
    =src
zip_safe = no

[options.packages.find]
where = src

[options.extras_require]
testing =
    pylint>=2
    pytest>=7
    pytest-cov>=4
    mypy>=1
    tox>=4
	dash>=2.13
    dash-bootstrap-components>=1.4

[options.package_data]
controller = py.typed
data = py.typed
